--- a/package.json
+++ b/package.json
@@ -12,5 +12,6 @@
 	"license": "MIT",
 	"keywords": ["spreadsheet", "heiho", "csv"],
 	"homepage": "https://kktsvetkov.github.io/heiho",
-  	"bugs": "https://github.com/kktsvetkov/heiho/issues"
+  	"bugs": "https://github.com/kktsvetkov/heiho/issues",
+	"publishConfig": { "registry": "https://npm.pkg.github.com/" }
 }
