Revert "Adding publishConfig to package.json"
This reverts commit 06f8af338016a4fe771116762904bd5024be7c06.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,5 @@
 	"license": "MIT",
 	"keywords": ["spreadsheet", "heiho", "csv"],
 	"homepage": "https://kktsvetkov.github.io/heiho",
-  	"bugs": "https://github.com/kktsvetkov/heiho/issues",
-	"publishConfig": { "registry": "https://npm.pkg.github.com/" }
+  	"bugs": "https://github.com/kktsvetkov/heiho/issues"
 }
